[tool.poetry]
name = "airbnb-clone-django"
version = "0.1.0"
description = ""
authors = ["lovers2020 <dkrkskswl@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.1.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
